--- a/styles/morkborg.css
+++ b/styles/morkborg.css
@@ -1,3 +1,245 @@
 .morkborg {
-
+  /* Sheet Tabs */
+  /* Items List */
+  /* Attributes */
+}
+.morkborg .window-content {
+  height: 100%;
+  padding: 5px;
+  overflow-y: hidden;
+}
+.morkborg form {
+  height: 100%;
+}
+.morkborg .sheet-header {
+  flex: 0 0 100px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  margin-bottom: 10px;
+}
+.morkborg .sheet-header .profile-img {
+  flex: 0 0 100px;
+  height: 100px;
+  margin-right: 10px;
+}
+.morkborg .sheet-header .header-fields {
+  flex: 1;
+  height: 100px;
+}
+.morkborg .sheet-header h1.charname {
+  height: 50px;
+  padding: 0px;
+  margin: 5px 0;
+  border-bottom: 0;
+}
+.morkborg .sheet-header h1.charname input {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+.morkborg .resource {
+  width: 50%;
+  height: 40px;
+  margin-top: 10px;
+  float: left;
+  text-align: center;
+}
+.morkborg .resource input {
+  width: 100px;
+  height: 28px;
+}
+.morkborg .tabs {
+  flex: 0 0 40px;
+  border-top: 1px solid #AAA;
+  border-bottom: 1px solid #AAA;
+}
+.morkborg .tabs .item {
+  line-height: 40px;
+  font-weight: bold;
+}
+.morkborg .tabs .item.active {
+  text-decoration: underline;
+  text-shadow: none;
+}
+.morkborg .sheet-body {
+  overflow: hidden;
+}
+.morkborg .sheet-body .tab {
+  height: 100%;
+  overflow-y: auto;
+}
+.morkborg .editor,
+.morkborg .editor-content {
+  height: 100%;
+}
+.morkborg .item-list {
+  list-style: none;
+  margin: 7px 0;
+  padding: 0;
+  overflow-y: auto;
+}
+.morkborg .item-list .item {
+  min-height: 30px;
+  line-height: 24px;
+  padding: 3px 0;
+  border-bottom: 1px solid #BBB;
+  align-items: stretch;
+}
+.morkborg .item-list .item img {
+  flex: 0 0 24px;
+  margin-right: 5px;
+}
+.morkborg .item-list .item-name {
+  margin: 0;
+}
+.morkborg .item-list .item-controls {
+  flex: 0 0 36px;
+}
+.morkborg .item-list .item-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-items: center;
+  flex: 2;
+  justify-content: flex-start;
+}
+.morkborg .item-list .item-button {
+  line-height: 1;
+  font-size: 11px;
+  flex: none;
+  width: auto;
+}
+.morkborg .attributes {
+  position: relative;
+}
+.morkborg .attributes .attribute-control,
+.morkborg .attributes .group-control {
+  flex: 0 0 20px;
+  text-align: center;
+  line-height: 28px;
+  border: none;
+}
+.morkborg .attributes .attribute-roll {
+  flex: 0 0 20px;
+  text-align: center;
+  border-bottom: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.morkborg .attributes .group-prefix {
+  height: 31px;
+  margin-right: 10px;
+}
+.morkborg .attributes .button {
+  width: 100%;
+  flex: 1;
+  margin: 0;
+  background: rgba(0, 0, 0, 0.1);
+  border: 2px groove #f0f0e0;
+  border-radius: 3px;
+  font-size: 14px;
+  line-height: 28px;
+  display: block;
+}
+.morkborg .attributes .attribute-key {
+  background: transparent;
+  border: none;
+}
+.morkborg .attributes-header {
+  position: sticky;
+  top: 0;
+  left: 0;
+  align-items: center;
+  padding: 0 5px;
+  margin: 5px 0;
+  background: #cfcdc2;
+  border: 1px solid #AAA;
+  border-radius: 2px;
+  text-align: left;
+  font-weight: bold;
+}
+.morkborg .attributes-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.morkborg .attributes-list li > * {
+  margin: 0 3px;
+  height: 28px;
+  line-height: 24px;
+  background: transparent;
+  border: none;
+  border-radius: 0;
+  border-bottom: 1px solid #AAA;
+}
+.morkborg .attributes-list .attribute-col label {
+  font-size: 10px;
+  text-align: center;
+  line-height: 1;
+}
+.morkborg .attributes-list .attribute-col input {
+  font-size: 11px;
+  text-align: center;
+  line-height: 1;
+  height: 50%;
+}
+.morkborg .attribute input[type="text"]::placeholder,
+.morkborg .group-header input[type="text"]::placeholder {
+  opacity: 0;
+  transition: opacity 0.25s ease-in-out;
+}
+.morkborg .attribute input[type="text"]:focus::placeholder,
+.morkborg .group-header input[type="text"]:focus::placeholder {
+  opacity: 1;
+}
+.morkborg .group-controls {
+  margin: 5px;
+}
+.morkborg .groups-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.morkborg .group {
+  margin: 5px 0 0;
+  padding: 0;
+}
+.morkborg .group-header {
+  align-items: center;
+  background: rgba(0, 0, 0, 0.05);
+  border: 1px solid #AAA;
+  border-radius: 2px;
+  padding: 2px 5px;
+}
+.morkborg .group-key,
+.morkborg .group-label {
+  font-weight: bold;
+  border: none;
+  border-bottom: 1px solid #AAA;
+  background: transparent;
+  border-radius: 0;
+  margin-right: 6px;
+}
+.morkborg .group-key {
+  opacity: 0.75;
+}
+.morkborg .group-label {
+  flex: 2;
+}
+.morkborg .group-dtype {
+  height: 24px;
+  flex: 0 0 116px;
+  margin: 0 5px;
+}
+.morkborg.sheet.actor {
+  min-width: 560px;
+  min-height: 420px;
+}
+.morkborg.sheet.item {
+  min-width: 460px;
+  min-height: 400px;
 }
