--- a/styles/morkborg.css
+++ b/styles/morkborg.css
@@ -40,6 +40,20 @@
   height: 100%;
   margin: 0;
 }
+.morkborg.sheet.item .sheet-header .item-subtitle {
+  flex: 0 0 100px;
+  height: 60px;
+  margin: 0;
+  padding: 5px;
+  text-align: right;
+  color: #7a7971;
+}
+.morkborg.sheet.item .sheet-header .item-subtitle .item-type {
+  font-size: 24px;
+  line-height: 26px;
+  margin: 0;
+  text-transform: uppercase;
+}
 .morkborg .resource {
   width: 50%;
   height: 40px;
