First steps in sheet styling.

--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -13,7 +13,6 @@
 
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-tabs tabs" data-group="primary">
-        <a class="item" data-tab="violence">Violence</a>
         <a class="item" data-tab="items">Items</a>
         <a class="item" data-tab="class">Class</a>
         <a class="item" data-tab="description">Background</a>
@@ -22,8 +21,8 @@
     {{!-- Sheet Body --}}
     <section class="sheet-body">
 
-        {{!-- Violence Tab --}}
-        <div class="tab" data-group="primary" data-tab="violence">
+        {{!-- Items Tab --}}
+        <div class="tab items" data-group="primary" data-tab="items">
             Weapons
             <ol class="item-list">
                 {{#each actor.weapons as |item id|}}
@@ -34,7 +33,7 @@
                     </div>
                     <div class="item-group">
                         <label style="font-weight: bold;">Damage</label>
-                        <span>dmg? {{item.damage}}</span>
+                        <span>{{item.data.damageDie}}</span>
                     </div>
                     <div class="item-controls">
                         <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
@@ -60,10 +59,21 @@
                 {{/each}}
             </ol>            
 
-        </div>
-
-        {{!-- Items Tab --}}
-        <div class="tab items" data-group="primary" data-tab="items">
+            Scrolls
+            <ol class="item-list">
+                {{#each actor.scrolls as |item id|}}
+                <li class="item flexrow" data-item-id="{{item._id}}">
+                    <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+                    <h4 class="item-name">{{item.name}}</h4>
+                    <div class="item-buttons">
+                    </div>
+                    <div class="item-controls">
+                        <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                        <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                    </div>
+                </li>
+                {{/each}}
+            </ol>   
 
             Containers
             <ol class="item-list">
