--- a/styles/morkborg.css
+++ b/styles/morkborg.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'FetteTrumpDeutsch';
+  src: url("../fonts/FetteTrumpDeutsch.ttf") format("truetype");
+}
+
 .morkborg {
   /* Sheet Tabs */
   /* Items List */
@@ -7,6 +12,8 @@
   height: 100%;
   padding: 5px;
   overflow-y: hidden;
+  background: black;
+  color: white;
 }
 .morkborg form {
   height: 100%;
@@ -71,6 +78,7 @@
   border-bottom: 1px solid #AAA;
 }
 .morkborg .tabs .item {
+  font-family: "FetteTrumpDeutsch", fantasy, serif;  
   line-height: 40px;
   font-weight: bold;
 }
