--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -13,7 +13,7 @@
 
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-tabs tabs" data-group="primary">
-        <a class="item" data-tab="items">Items</a>
+        <a class="item active" data-tab="items">Items</a>
         <a class="item" data-tab="class">Class</a>
         <a class="item" data-tab="description">Background</a>
     </nav>
