--- a/styles/morkborg.css
+++ b/styles/morkborg.css
@@ -118,6 +118,7 @@
   flex: 0 0 24px;
   margin-right: 5px;
 }
+
 .morkborg .item-list .item-name {
   margin: 0;
 }
@@ -137,6 +138,26 @@
   font-size: 11px;
   flex: none;
   width: auto;
+}
+.morkborg .items-list .items-header {
+  height: 28px;
+  margin: 2px 0;
+  padding: 0;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.05);
+  border: 2px groove #eeede0;
+  font-weight: bold;
+}
+.morkborg .items-list .items-header > * {
+  font-size: 12px;
+  text-align: center;
+}
+.morkborg .items-list .items-header .item-name {
+  padding-left: 5px;
+  font-family: "Modesto Condensed", "Palatino Linotype", serif;
+  font-size: 20px;
+  font-weight: 700;
+  font-size: 16px;
 }
 .morkborg .attributes {
   position: relative;
