--- a/templates/container-sheet.html
+++ b/templates/container-sheet.html
@@ -33,10 +33,10 @@
 
             {{!-- Price --}}
             <div class="form-group">
-                <label>{{ localize "MB.ItemScrollType" }}</label>
+                <label>{{ localize "MB.ItemPrice" }}</label>
                 <input type="text" name="data.price" value="{{data.price}}" placeholder="2" data-dtype="Number" />
             </div> 
-
+    
             {{!-- Capacity --}}
             <div class="form-group">
                 <label>{{ localize "MB.ItemCapacity" }}</label>
