--- a/templates/scroll-sheet.html
+++ b/templates/scroll-sheet.html
@@ -43,7 +43,7 @@
                 <select name="data.scrollType">
                     {{#select data.scrollType}}
                     {{#each config.scrollTypes as |name value|}}
-                    <option value="{{value}}">{{name}}</option>
+                    <option value="{{value}}">{{localize name}}</option>
                     {{/each}}
                     {{/select}}
                 </select>
