--- a/templates/armor-sheet.html
+++ b/templates/armor-sheet.html
@@ -43,7 +43,7 @@
                 <select name="data.tier">
                     {{#select data.tier}}
                     {{#each config.armorTiers as |name tier|}}
-                    <option value="{{tier}}">{{tier}} ({{name}})</option>
+                    <option value="{{tier}}">{{tier}} ({{localize name}})</option>
                     {{/each}}
                     {{/select}}
                 </select>
