--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -84,8 +84,8 @@
                         <div class="item-buttons">
                             <button class="item-button rollable" data-roll="d20+@abilities.agility.score" data-label="defend_{{item._id}}"
                                     title="{{localize 'MB.Defend'}}">{{localize "MB.Defend"}}</button>
-                            <button class="item-button rollable" data-roll="d20+@abilities.agility.score" data-label="defend_{{item._id}}"
-                                    title="{{localize 'MB.Defend'}}">{{localize "MB.Defend"}}</button>                                    
+                            <button class="item-button rollable" data-roll="{{item.data.damageReductionDie}}" data-label="damageReduction_{{item._id}}"
+                                    title="{{localize 'MB.DamageReduction'}}">{{item.data.damageReductionDie}} {{localize "MB.DamageReduction"}}</button>                                    
                         </div>
                         <div class="item-controls">
                             <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
